[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bluefc"
version = "0.0.1"
authors = [
    {name = "Elias Ankerhold", email = "elias.ankerhold@aalto.fi"},
]
description = "Package for HTTPS POST/GET communication with the API of BlueFors Control Software."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GPL-3.0-only",
]
dependencies = [
    "requests",
]
